src/objects/Partner_Offers__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>CC_Process__c</fullName>
        <label>CC Process</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Links__c</fullName>
        <label>External Links</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ__c</fullName>
        <label>FAQ</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <label>Internal</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure_Process__c</fullName>
        <label>Procedure/Process</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reminders_Quick_Tips__c</fullName>
        <label>Reminders/Quick Tips</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sales_Process__c</fullName>
        <label>Sales Process</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <label>Partner Offer</label>
    <pluralLabel>Partner Offers</pluralLabel>
</CustomObject>